WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303527
Popover light dismiss does not work when touch event regions are enabled
https://bugs.webkit.org/show_bug.cgi?id=303527
Summary
Popover light dismiss does not work when touch event regions are enabled
Lily Spiniolas
Reported
2025-12-04 00:24:33 PST
rdar://165823080
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2025-12-04 00:56:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54825
EWS
Comment 2
2025-12-04 10:03:34 PST
Committed
303923@main
(c467303c1538): <
https://commits.webkit.org/303923@main
> Reviewed commits have been landed. Closing PR #54825 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug